# RSSReader

./: .gitignore  Makefile  README.md  feed.atom  feeds.txt  meson.build  meson.options  script.sh
io.ohno.rssreader/: manifest.json
src/: download.cpp  download.hpp  feeds.cpp  feeds.hpp  main.cpp  main.hpp  meson.build  save.cpp  save.hpp  works.cpp  works.hpp
subprojects/: glib.wrap  libsoup.wrap  sysprof.wrap
subprojects/libpsl/: libpsl.h  meson.build
subprojects/libxml2-2.15.1/: Makefile.in  configure
subprojects/sqlite-amalgamation-3510200/: .meson-subproject-wrap-hash.txt
subprojects/zlib-1.2.11/: .meson-subproject-wrap-hash.txt
